--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IMC</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./button.css">
     <script src="./app.js" defer></script>
-    <title>Calculadora IMC</title>
 </head>
 <body>
-    <head>
-
-    </head>
     <main>
-
+        <div class="container">
+            <div class="title">Calculadora - IMC</div>
+            <form id="imc-form">
+                <div class="input">
+                    <label>Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="input">
+                    <label>Altura:</label>
+                    <input type="number" id="altura">
+                </div>
+                <div class="input">
+                    <label>Peso:</label>
+                    <input type="number" id="peso">
+                </div>
+            </form>
+            <button id="calcular" class="button template">Calcular</button>
+            <div class="result"></div>
+        </div>
     </main>
-    <footer>
-        
-    </footer>
 </body>
 </html>
