--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <form id="imc-form">
                 <div class="input">
                     <label>Nome:</label>
-                    <input type="text" id="nome">
+                    <input type="text" id="nome" required>
                 </div>
                 <div class="input">
                     <label>Altura:</label>
-                    <input type="number" id="altura">
+                    <input type="number" id="altura" step="any" required>
                 </div>
                 <div class="input">
                     <label>Peso:</label>
-                    <input type="number" id="peso">
+                    <input type="number" id="peso" step="any" required>
                 </div>
             </form>
             <button id="calcular" class="button template">Calcular</button>
