--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </form>
             <button id="calcular" class="button template">Calcular</button>
-            <div class="result"></div>
+            <div id="result" class="result"></div>
         </div>
     </main>
 </body>
