--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input type="number" id="peso" step="any" required>
                 </div>
             </form>
-            <button id="calcular" class="button template">Calcular</button>
+            <button id="calcular" class="button blue">Calcular</button>
             <div id="result" class="result"></div>
         </div>
     </main>
